<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    tools:context="com.diogenes.pokeapp.activity.PokemonDetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_detail_others"
        android:layout_width="match_parent"
        android:layout_height="116dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">

            <ImageView
                android:id="@+id/iv_detail_pokemon"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_detail_pokemon"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/iv_detail_pokemon"
                android:layout_toRightOf="@+id/iv_detail_pokemon"
                android:text="@null"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_detail_types_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_detail_name"
                android:layout_toEndOf="@+id/iv_detail_pokemon"
                android:text="@string/detail_types_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_detail_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_detail_types_label"
                android:layout_marginBottom="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_toEndOf="@+id/tv_detail_types_label"
                android:text="@null" />

            <TextView
                android:id="@+id/tv_detail_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_detail_types_label"
                android:layout_toEndOf="@+id/iv_detail_pokemon"
                android:text="@string/detail_weight_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_detail_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_detail_weight_label"
                android:layout_marginBottom="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_toEndOf="@+id/tv_detail_weight_label"
                android:text="@null" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_detail_abilities"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/cv_detail_others"
        android:layout_marginTop="@dimen/cv_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">

            <TextView
                android:id="@+id/tv_detail_ability_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:text="@string/detail_ability_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_detail_ability_title"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_detail_abilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_ability_title">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@id/cv_detail_stats"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/cv_detail_abilities"
        android:layout_marginTop="@dimen/cv_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">

            <TextView
                android:id="@+id/tv_detail_stats_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:text="@string/detail_stat_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_detail_stats_title"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_detail_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_stats_title" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_detail_moves"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/cv_detail_stats"
        android:layout_marginTop="@dimen/cv_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">

            <TextView
                android:id="@+id/tv_detail_moves_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:text="@string/detail_moves_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_detail_moves_title"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_detail_moves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_moves_title" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>